# mainpipe_assessment

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  config-test.yaml  config.test.yaml  config.test_reporting.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_lang_detect.py  test_report.json
examples/: run_pipeline.py
scripts/: deduplicate_raw_data.py  generate_dedup_test_data.py  generate_sample_data.py  generate_test_data.py  reduce_tokenized_data.py  smoke_test.sh
src/mainpipe/: cli.py  pipeline.py
src/mainpipe/acquisition/: downloader.py
src/mainpipe/cleaning/: cleaner.py
src/mainpipe/export/: exporter.py
src/mainpipe/inspectability/: inspector.py
src/mainpipe/tokenization/: tokenizer.py
src/mainpipe/utils/: duplicate_detector.py  language_detector.py  pii_detector.py
tests/: test_pipeline.py  test_smoke_pipeline.py
